--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- 
 DD Template Name: Portfolio Responsive_HTML_BS5 Template
-Version: 2.0.9
+Version: 2.1.1
 Author: Daine Dvorak
 -->
 <!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
@@ -246,8 +246,8 @@ Author: Daine Dvorak
 					</li>
 					<li>
 						<a href="https://github.com/Jettlifetech" id="github-navbar-link" class="siderbar_icon">
-							<span class="first_icon"><i class="fa fa-github fa-lg" style="color: #000000;"></i></span>
-							<span class="second_icon"><i class="fa fa-github fa-lg" style="color: #000000;"></i></span>
+							<span class="first_icon"><i class="fab fa-github fa-lg" style="color: #000000;"></i></span>
+							<span class="second_icon"><i class="fab fa-github fa-lg" style="color: #000000;"></i></span>
 						</a>
 					</li>
 					<li>
@@ -265,6 +265,8 @@ Author: Daine Dvorak
 
 	<!-- start banner section -->
 	<div class="port_bannerbg_wrapper">
+		<!-- start banner wrapper -->
+		<div class="port_banner_wrapper" id="cv_container">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="banner_img_wrapper">
@@ -302,7 +304,6 @@ Author: Daine Dvorak
 
 								<h2 style="width: fit-content;" class="stranger">OPEN FOR WORK!</h2>
 								<h1 class="banner_name" class="stranger">Daine Dvorak</h1>
-								<p>Portfolio Website</p>
 
 								<p class="banner_pera">I Am A</p>
 								<div class="banner_typingtext">
@@ -465,7 +466,7 @@ Author: Daine Dvorak
 										<span class="first_text">Download CV</span>
 										<span class="second_text">Download</span>
 									</a>
-									<a href="#contact_sec" class="portfolio_btn btn_red" id="redirect_contact">
+									<a href="javascript:;" class="portfolio_btn btn_red" id="redirect_contact">
 										<span class="first_text">Hire Me</span>
 										<span class="second_text">Contact</span>
 									</a>
@@ -533,7 +534,7 @@ Author: Daine Dvorak
 								<div class="port_sub_heading_wrapper">
 									<h2 class="port_sub_heading">My Work History</h2>
 								</div>
-								<h2class="port_heading">My Experience</h1>
+								<h2 class="port_heading">My Experience</h1>
 							</div>
 						</div>
 					</div>
@@ -1113,16 +1114,14 @@ Author: Daine Dvorak
 						</div>
 					</div>
 				</div>
-				<div class="swiper-pagination"></div>
+				<div class="swiper-pagination bg-dark"></div>
 			</div>
 		</div>
 
 		<!-- END Certifications Slider section  -->
-	
-	 <!-- start Portfolio section  -->
-		<div class="port_projects_setions port_projects_setions01   page_scroll" data-scroll="1" id="project_sec">
-		
-		<div class="projects_section">
+
+		<!-- 			<div class="port_projects_setions port_projects_setions01   page_scroll" data-scroll="1" id="project_sec"> <!-- start Portfolio section  -->
+		<!--<div class="projects_section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -1130,7 +1129,7 @@ Author: Daine Dvorak
 							<div class="port_sub_heading_wrapper">
 								<h2 class="port_sub_heading">Quality Work</h2>
 							</div>
-							<h2class="port_heading">My Portfolio Case Studies & Projects</h1>
+							<h1 class="port_heading">My Portfolio Case Studies & Projects</h1>
 						</div>
 					</div>
 
@@ -1273,7 +1272,7 @@ Author: Daine Dvorak
 									</a>
 								</div>
 							</div>
-						</div> 
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -1292,7 +1291,7 @@ Author: Daine Dvorak
 							<div class="port_sub_heading_wrapper">
 								<h2 class="port_sub_heading">Testimonial</h2>
 							</div>
-							<h2class="port_heading">words from clients</h1>
+							<h1 class="port_heading">words from clients</h1>
 						</div>
 					</div>
 				</div>
@@ -1450,7 +1449,7 @@ Author: Daine Dvorak
 						<div class="port_sub_heading_wrapper">
 							<h2 class="port_sub_heading">Contact Me Today!</h2>
 						</div>
-						<h2class="port_heading">Get In Touch</h1>
+						<h1 class="port_heading">Get In Touch</h1>
 					</div>
 				</div>
 			</div>
