--- a/portfolio-details-template-v1.html
+++ b/portfolio-details-template-v1.html
@@ -327,7 +327,7 @@ background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, F
         <svg  fill="white" xmlns="http://www.w3.org/2000/svg" width="25px" height="auto" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
       <br>  Click Here To Call Daine Now!
       </a>
-<a href="https://dainedvorak.com/assets/daine-dvorak-resume/daine-dvorak_cv_resume_ai-powered_seo_expert-daine_dvorak-compressed_updated-5-13-2025_0001.pdf" class="btn" style="background:rgba(255, 255, 255, 0.65);opacity:.85;font-weight:600;border:1.5px solid #36caff;" download>
+  <a href="https://dainedvorak.com/assets/daine-dvorak-resume/daine-dvorak_cv_resume_ai-powered_seo_expert-daine_dvorak-compressed_updated-5-13-2025_0001.pdf" class="btn" style="background:rgba(255, 255, 255, 0.65);opacity:.85;font-weight:600;border:1.5px solid #36caff; download">
 <svg xmlns="http://www.w3.org/2000/svg"  width="25px" height="auto"  viewBox="0 0 576 512"><path d="M384 480l48 0c11.4 0 21.9-6 27.6-15.9l112-192c5.8-9.9 5.8-22.1 .1-32.1S555.5 224 544 224l-400 0c-11.4 0-21.9 6-27.6 15.9L48 357.1 48 96c0-8.8 7.2-16 16-16l117.5 0c4.2 0 8.3 1.7 11.3 4.7l26.5 26.5c21 21 49.5 32.8 79.2 32.8L416 144c8.8 0 16 7.2 16 16l0 32 48 0 0-32c0-35.3-28.7-64-64-64L298.5 96c-17 0-33.3-6.7-45.3-18.7L226.7 50.7c-12-12-28.3-18.7-45.3-18.7L64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l23.7 0L384 480z"/></svg>
         Download Daine’s Resume
       </a>
