--- a/portfolio-details-template-v3.html
+++ b/portfolio-details-template-v3.html
@@ -273,7 +273,7 @@
     .cta-footer .btn {
       font-size: 1.25rem;
       padding: 0.75rem 2.4rem;
-      border-radius: 2rem;
+      border-radius: 1rem;
       background: #fff;
       color: #161E2E;
       border: none;
@@ -283,10 +283,20 @@
       box-shadow: 0 2px 14px #fff6;
     }
     .cta-footer .btn:hover {
-      background: #36caff;
+      background: #ffffff;
       color: #fff;
+      border: solid 5.5px #ffffff;
+
       transform: translateY(-4px) scale(1.04);
-      box-shadow: 0 2px 28px #36caff99;
+      box-shadow: 0 20px 28px #efff0f99;
+    }
+        .cta-footer-btn-2 .btn:hover {
+      background: #ffffff;
+      color: #fff;
+      border: solid 5.5px #ffffff;
+
+      transform: translateY(-4px) scale(1.04);
+      box-shadow: 0 20px 28px #efff0f99;
     }
         .section-img {
       max-width: 320px;
@@ -301,6 +311,14 @@
   </style>
 </head>
 <body>
+<div class="jumbotron bg-white">
+      <div class="container-fluid mb-5 pb-4 pt-4 text-center">
+      <h1 class="display-4 fw-bold mb-3" style="color:#0a0909;">Insight Flow</h1>
+      <p class="lead mb-4" style="color: #353535; max-width: 700px; margin: 0 auto;">
+        A case study showcasing Daine Dvorak's expertise in technical SEO, automation, and AI-driven optimization.
+      </p>
+    </div>
+</div>
   <!-- Floating Metrics -->
   <section class="metrics-float">
     <div class="metric-box">
@@ -328,9 +346,7 @@
         <p>
           Transforming a major SaaS brand's organic reach with technical SEO automation, rich result strategy, and continuous AI-driven optimization.
         </p>
-        <p class="mb-0 text-info">
-          <strong>Team:</strong> Daine (Lead), Dev Team, Marketing Ops, AI Specialist
-        </p>
+        <hr style="height: 5px; background: linear-gradient(90deg,#36caff,#ff24a8 90%); border: none; border-radius: 1rem;">
       </div>
     </div>
   </section>
@@ -462,7 +478,7 @@
   </section>
 
 <!-- Full Width CTA Block (Replacing Testimonial Section) -->
-<section class="container-fluid p-4 mt-5">
+<section class="container-fluid p-4 mt-5" style="background-color: #161E2E;">
   <div class="w-100 cta-footer" style="border-radius: 2rem; margin-bottom:2.5rem;">
     <span class="badge rounded-pill bg-success px-4 py-2 mb-4 fs-6" style="font-weight:700; font-size:1.15rem; background: linear-gradient(90deg,#36caff,#31db8a 90%); color: #191b32; box-shadow: 0 2px 14px #36caff99;">
       <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-briefcase-fill me-1" viewBox="0 0 16 16" style="position:relative;top:3px;">
@@ -480,7 +496,7 @@
 <svg xmlns="http://www.w3.org/2000/svg"   width="5%" height="auto"   viewBox="0 0 640 512"><path d="M320 32c-8.1 0-16.1 1.4-23.7 4.1L15.8 137.4C6.3 140.9 0 149.9 0 160s6.3 19.1 15.8 22.6l57.9 20.9C57.3 229.3 48 259.8 48 291.9l0 28.1c0 28.4-10.8 57.7-22.3 80.8c-6.5 13-13.9 25.8-22.5 37.6C0 442.7-.9 448.3 .9 453.4s6 8.9 11.2 10.2l64 16c4.2 1.1 8.7 .3 12.4-2s6.3-6.1 7.1-10.4c8.6-42.8 4.3-81.2-2.1-108.7C90.3 344.3 86 329.8 80 316.5l0-24.6c0-30.2 10.2-58.7 27.9-81.5c12.9-15.5 29.6-28 49.2-35.7l157-61.7c8.2-3.2 17.5 .8 20.7 9s-.8 17.5-9 20.7l-157 61.7c-12.4 4.9-23.3 12.4-32.2 21.6l159.6 57.6c7.6 2.7 15.6 4.1 23.7 4.1s16.1-1.4 23.7-4.1L624.2 182.6c9.5-3.4 15.8-12.5 15.8-22.6s-6.3-19.1-15.8-22.6L343.7 36.1C336.1 33.4 328.1 32 320 32zM128 408c0 35.3 86 72 192 72s192-36.7 192-72L496.7 262.6 354.5 314c-11.1 4-22.8 6-34.5 6s-23.5-2-34.5-6L143.3 262.6 128 408z"/></svg>
         View More Case Studies
       </a>
-      <a href="tel:9137105841" class="btn" style="background:linear-gradient(90deg,#36caff,#ff24a8);color:#fff;font-weight:700;">
+      <a href="tel:9137105841" class="btn " style="background:linear-gradient(180deg,#02fc17,#008100);color:#fff;font-weight:700;">
         <svg  fill="white"  width="15%" class="mb-3" height="auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
       <br>  Click Here To Call Daine Now!
       </a>
