--- a/coming-soon/schedule-meeting-with-daine-dvorak.html
+++ b/coming-soon/schedule-meeting-with-daine-dvorak.html
@@ -13,6 +13,13 @@
 
     gtag('config', 'G-R5YXDWMZEV');
   </script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "l2wzfsipff");
+</script>
   
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <link async
