--- a/index-backup-2.html
+++ b/index-backup-2.html
@@ -58,7 +58,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
-	<!-- Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4Q8BRNZ"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
@@ -333,7 +333,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<span class="first_text pl-2 pr-2">Download Resume</span>
 										<span class="second_text">Download</span>
 									</a>
-									<a href="#contact_sec" class="portfolio_btn btn_red">
+									<a href="#contactForm" class="portfolio_btn btn_red">
 										<span class="first_text">Send Message</span>
 										<span class="second_text">Send</span>
 									</a>
@@ -522,7 +522,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</div>
 							<div class="col-xl-3 col-lg-6 col-sm-6 text-center">
 								<div class="progressbar">
-									<div class="second circle" data-percent="94">
+									<div class="second circle" data-percent="97">
 										<strong></strong>
 									</div>
 									<span>Technical SEO & CWV Optimization Developer</span>
@@ -701,11 +701,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												</span> Specialist</h4>
 											<span class="data_hover c-cyan">Intouch Solutions (New name: 'Eversana
 												Intouch')</span>
-											<p class="ex_details">Sed ut unde omnis iste natus error sit totam rem
-												aperiam are many variations of done.</p>
-											<p class="more_content">Extra contant Sed ut perspiciatis unde omnis iste
-												natus.</p>
-											<a class="ex_btn">Read More</a>
+										<p class="ex_details">Led SEO strategy and technical optimization for large healthcare and pharma websites,</p>
+											<div id="more_content_1" class="more_content">
+												<p> collaborating with UX, dev, and content teams to implement measurable improvements. Built automation tools to streamline audits, keyword mapping, and reporting—improving efficiency and scale.
+												</p>
+
+												<h4 class="pt-2 pb-2"><i class="fas fa-medal"></i> Core Achievements
+												</h4>
+												<hr>
+												<ul class="pl-2">
+													<li>Built internal tools for automated keyword gap analysis and competitor tracking</li>
+												<li>Created documentation and workflows to support cross-functional SEO scaling</li>
+												<li>Drove a 75% increase in organic visibility across enterprise healthcare domains</li>
+												<li>Reduced audit turnaround by 60% using automated site health diagnostics</li>
+												</ul>
+											</div>
+												<a class="ex_btn">Read More</a>
+
 										</div>
 									</div>
 									<div class="col-lg-4 col-md-4 col-sm-4 col-12">
@@ -770,7 +782,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- START Certifications Slider section  -->
 
 		<!-- Certifications Slider Block -->
-		<div class="body2 p-4 mt-4 mb-5" style="margin-left: 120px; padding-top: 50%;">
+		<div class="body2 cert-slider-section p-4 mt-4 mb-5">
 			<div class="swiper cert-slider">
 				<div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous certificate"></div>
 				<div class="swiper-button-next" tabindex="0" role="button" aria-label="Next certificate"></div>
@@ -1124,14 +1136,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						</div>
 					</div>
 				</div>
-				<div class="swiper-pagination bg-dark"></div>
+				<div class="swiper-pagination mb-5"></div>
 			</div>
 		</div>
 
 		<!-- END Certifications Slider section  -->
 
-			<div class="port_projects_setions port_projects_setions01   page_scroll" data-scroll="1" id="project_sec"> <!-- start Portfolio section  -->
-		<div class="projects_section">
+		<!-- 			<div class="port_projects_setions port_projects_setions01   page_scroll" data-scroll="1" id="project_sec"> <!-- start Portfolio section  -->
+		<!--<div class="projects_section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -1150,23 +1162,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<li><a data-filter=".design"> SEO</a></li>
 								<li><a data-filter=".development">Development</a></li>
 								<li><a data-filter=".photoshop">A.I. & LLM's</a></li>
-								<li><a data-filter=".auto-innov">Automation & Innovation</a></li>
+								<li><a data-filter=".template">Automation & Innovation</a></li>
 								<li><a data-filter=".leadership">Leadership</a></li>
 							</ul>
 						</div>
 						<div class="gallery_container">
 							<div class="gallery_grid">
-								<div class="grid-item auto-innov">
+								<div class="grid-item design">
 									<a href="#project-1" target="_blank" class="project-link">
 										<div class="grid_img">
-											<img src="https://dainedvorak.com/assets/images/portfolio-images/bookmarklet-automation-portfolio-cover.jpg" alt="project-img">
-											<div class="overlay">
+											<img src="https://dummyimage.com/350x350" alt="project-img">
+											<div class="overlay"><button class="view-details-btn">View Details</button>
 											</div>
-											<button class="btn btn-color-success">View Details</button>
 										</div>
 										<div class="grid-content">
-											<h3>Bookmarklet</h3>
-											<span>Automations</span>
+											<h3>Moc Design</h3>
+											<span>Design</span>
 										</div>
 									</a>
 								</div>
@@ -1283,45 +1294,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									</a>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 	</div>
 	</div><!-- End Portfolio section  -->
 
 
+	<!-- start testimonial section  -->
 
-	
-	<!-- start contact wrapper  -->
-	<div class="port_contact_wrapper  page_scroll" data-scroll="3" id="contact_sec">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="port_heading_wrapper text-center ">
-						<div class="port_sub_heading_wrapper">
-							<h2 class="port_sub_heading">Contact Me Today!</h2>
-						</div>
-						<h1 class="port_heading">Get In Touch</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="port_map_setions"> <!-- start map section  -->
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="map_box maxw-1000 mx-auto map-container">
-							<div id="world-map" class="jvmap-smart"></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div><!-- End map section  -->
+	<!-- End testimonial section  -->
 
-		<div class="port_contact_setions" id="scroll_contact"> <!-- start Contact section  -->
-			<div class="contact_section">
+
+<!-- start testimonial section  #2-->
+
+
+
+<!-- End testimonial section  #2-->
+
+		<div class="port_contact_setions" id="scroll_contact"  style="margin-top: 10%;"> <!-- start Contact section  -->
+			<div class="contact_section mb-5">
 				<div class="container">
 					<div class="port_contact_mainbox">
 						<div class="row">
@@ -1894,6 +1888,60 @@ window.addEventListener("resize", () => {
 	<script src="assets/js/jquery-jvectormap-world-mill.js"></script>
 	<script src="assets/js/scrollbar.js"></script>
 	<script src="assets/js/custom.js"></script>
+	<style>
+		.cert-slider-section {
+			width: 100vw;
+			max-width: 100vw;
+			margin-left: 0;
+			padding-top: 60px;
+			padding-bottom: 60px;
+			padding-left: 140px; /* match or exceed sidebar width */
+			padding-right: 40px;
+			box-sizing: border-box;
+			background: transparent;
+			overflow-x: hidden;
+			position: relative;
+		}
+		@media (max-width: 991px) {
+			.cert-slider-section {
+				padding-left: 20px;
+				padding-right: 20px;
+			}
+		}
+		.cert-slider {
+			width: 100%;
+			max-width: 100%;
+		}
+		.swiper-button-prev,
+		.swiper-button-next {
+			background: rgba(255,255,255,0.85);
+			border-radius: 50%;
+			width: 48px;
+			height: 48px;
+			box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+			top: 50%;
+			transform: translateY(-50%);
+			color: #333;
+			z-index: 2;
+		}
+		.swiper-button-prev {
+			left: 10px;
+		}
+		.swiper-button-next {
+			right: 10px;
+		}
+		.swiper-pagination {
+			bottom: 0 !important;
+		}
+		.cert-slider .swiper-slide {
+			display: flex;
+			justify-content: center;
+			align-items: stretch;
+		}
+		.cert-slider .card {
+			width: 100%;
+			max-width: 350px;
+			margin: 0 auto;
+		}
+	</style>
 </body>
-
-</html>
