--- a/index-backup.html
+++ b/index-backup.html
@@ -13,14 +13,13 @@ Author: Daine Dvorak
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-R5YXDWMZEV');
-  </script>
+	 <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W4Q8BRNZ');</script>
+
 	<meta name="name" content="Hire Daine Dvorak: SEO Manager with AI expertise, a record of ranking success, and a data-driven approach to search and content optimization.">
 	<meta name="keywords"
 		content="Creative, minimal, Portfolio, cv, business, Resume, Information, personal portfolio, Professional">
@@ -52,6 +51,10 @@ Author: Daine Dvorak
 </head>
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4Q8BRNZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 	<!-- preloader section start -->
 	<!-- <div class="preloader">
 			<div class="status" ><img src="assets/images/loader.gif" id="preloader_image" alt="loader">
