--- a/testimonial-slider/index.html
+++ b/testimonial-slider/index.html
@@ -7,6 +7,13 @@
 
 </head>
 <body>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W4Q8BRNZ');</script>
+<!-- End Google Tag Manager -->
 <!-- partial:index.partial.html -->
 <head>
 	<meta charset="UTF-8">
@@ -213,6 +220,10 @@ h1 {
 </head>
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4Q8BRNZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 	<div class="content-wrapper">
 		<h1>Our Reviews</h1>
 		<div class="blue-line"></div>
